Bug Fixes - Fixed role for import cluster and host page - Create Pool workflow: replicas field should not show when EC selected(#237) - PG Count should only accept power of 2 numbers(#239) - Create RBD workflow, extra buttons visible(#239) - Fixed: Create Pool workflow: if user selects EC and 2+1, replicas are not shown(#241, #243, #237) - Create Pool workflow: default # of pools to create should always be set to 1(#254) - Create Pool workflow, it’s missing 1 button to let user create the pool after the Basic Settings(#255)

--- a/src/modules/rbd/create-rbd/create-rbd.scss
+++ b/src/modules/rbd/create-rbd/create-rbd.scss
@@ -114,4 +114,12 @@
     .create-pool-wizard .wizard-pf .wizard-pf-body .wizard-pf-sidebar{
         top: 254px;
     }
+
+    .hide-rbd-footer{
+        display: none;
+    }
+
+    .show-rbd-footer{
+        display: block;
+    }
 }
